trait-xml/tests/pass/supertrait.rs
trait_xml::trait_xml! {
    <trait>
        <name>Foo</name>
        <bounds>
            <req>Bar</req>
        </bounds>
    </trait>
}

trait Bar {}

fn main() {}
