trait-xml/tests/fail/type_fb_noltnob.rs
trait_xml::trait_xml! {
    <trait>
        <name>Foo</name>
        <bounds>
            <type>
                <name>Bar</name>
                <for-bound></for-bound>
            </type>
        </bounds>
    </trait>
}

fn main() {}
